<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/skHoras"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nombre" />


        <Switch
            android:id="@+id/swAnonimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:text="@string/anonimo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="212dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sistema" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <RadioButton
                android:id="@+id/rbMac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mac" />

            <RadioButton
                android:id="@+id/rbWindows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/windows" />

            <RadioButton
                android:id="@+id/rbLinux"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/linux" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/especialidad" />

        <CheckBox
            android:id="@+id/cbDAM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="DAM" />

        <CheckBox
            android:id="@+id/cbASIR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="ASIR" />

        <CheckBox
            android:id="@+id/cbDAW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="20dp"
            android:text="DAW" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/horas" />

        <TextView
            android:id="@+id/txtHoras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <SeekBar
            android:id="@+id/sbHoras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="6"
            android:min="1"
            android:onClick="avanzaBarra"
            android:progress="1" />

    </LinearLayout>

</LinearLayout>